--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=3.142.97.40
+HOST=localhost
 PORT=3333
 NODE_ENV=development
 APP_NAME=AdonisJs
@@ -6,9 +6,9 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=7wQO4RPSGHpcg1jQI0gxjBWX83ap4sk9
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=seven-1.c7tenqlebu3p.us-east-2.rds.amazonaws.com
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_USER=admin
+DB_PASSWORD=bigBpro2020!
 DB_DATABASE=tipi
 HASH_DRIVER=bcrypt
