--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ DB_USER=admin
 DB_PASSWORD=bigBpro2020!
 DB_DATABASE=tipi
 HASH_DRIVER=bcrypt
+
+REDIS_ENDPOINT=redis-10768.c11.us-east-1-3.ec2.cloud.redislabs.com
+REDIS_PORT=10768
+REDIS_DATABASE=redis
+REDIS_PASS=CyTYmLnLSkyOFL@
