--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Adonisjs boilerplate for API server with pre-configured JWT",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "node ace test"
   },
   "keywords": [
@@ -26,6 +26,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "adonis": "^0.9.0",
+    "axios": "^0.21.1",
+    "bull": "^3.22.5",
     "mysql": "^2.18.1"
   },
   "devDependencies": {},
