--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "adonis": "^0.9.0",
     "axios": "^0.21.1",
     "bull": "^3.22.5",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {},
   "autoload": {
